chgmgmt_build/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 60, 55)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <formula>IMAGE(purl__c , &quot;No Image&quot;, 217, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像大</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ogg__UpwardMapId__c</fullName>
        <description>Upwardで表示する分布地図のID。分布地図が未選択の場合はnullが設定されます。</description>
        <label>デフォルトの分布地図ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ogg__UpwardTeamId__c</fullName>
        <description>Upwardで表示するチームのID。チームが未選択の場合はnullが設定されます。</description>
        <label>デフォルトのチームID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purl__c</fullName>
        <formula>if((Image__c != &apos;&apos; || Image__c != null),LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/servlet/servlet.FileDownload?file=&apos; + Image__c,LEFT($Api.Enterprise_Server_URL_290, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_290) -1) + &apos;/resource/no_product_image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>purl</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>有効ユーザ</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>